netcdf.h

/* These defs added by netCDF configure because parallel HDF5 is not present. */
typedef int nc_type;
EXTERNL int
nc_copy_att(int ncid_in, int varid_in, const char *name, int ncid_out, int varid_out);
EXTERNL int
nc_rename_att(int ncid, int varid, const char *name, const char *newname);
EXTERNL int
nc_del_att(int ncid, int varid, const char *name);
/* End _att */
/* Begin {put,get}_att */

EXTERNL int
nc_put_att_text(int ncid, int varid, const char *name,
		size_t len, const char *op);
EXTERNL int
nc_get_att_text(int ncid, int varid, const char *name, char *ip);
EXTERNL int
nc_put_att_uchar(int ncid, int varid, const char *name, nc_type xtype,
		 size_t len, const unsigned char *op);
EXTERNL int
nc_get_att_uchar(int ncid, int varid, const char *name, unsigned char *ip);
EXTERNL int
nc_put_att_schar(int ncid, int varid, const char *name, nc_type xtype,
		 size_t len, const signed char *op);
EXTERNL int
nc_get_att_schar(int ncid, int varid, const char *name, signed char *ip);
EXTERNL int
nc_put_att_short(int ncid, int varid, const char *name, nc_type xtype,
		 size_t len, const short *op);
EXTERNL int
nc_get_att_short(int ncid, int varid, const char *name, short *ip);
EXTERNL int
nc_put_att_int(int ncid, int varid, const char *name, nc_type xtype,
	       size_t len, const int *op);
EXTERNL int
nc_get_att_int(int ncid, int varid, const char *name, int *ip);
EXTERNL int
nc_put_att_long(int ncid, int varid, const char *name, nc_type xtype,
		size_t len, const long *op);
EXTERNL int
nc_get_att_long(int ncid, int varid, const char *name, long *ip);
EXTERNL int
nc_put_att_float(int ncid, int varid, const char *name, nc_type xtype,
		 size_t len, const float *op);
EXTERNL int
nc_get_att_float(int ncid, int varid, const char *name, float *ip);
EXTERNL int
nc_put_att_double(int ncid, int varid, const char *name, nc_type xtype,
		  size_t len, const double *op);
EXTERNL int
nc_get_att_double(int ncid, int varid, const char *name, double *ip);
/* End {put,get}_att */
/* Begin _var */

EXTERNL int
nc_def_var(int ncid, const char *name, nc_type xtype, int ndims, 
	   const int *dimidsp, int *varidp);
EXTERNL int
nc_inq_var(int ncid, int varid, char *name, nc_type *xtypep, 
	   int *ndimsp, int *dimidsp, int *nattsp);