win32/NET/netcdf_vb/NetCDF.vb


    ' int nc_copy_att(int ncid_in, int varid_in, const char *name, int ncid_out, int varid_out);
    Declare Ansi Function nc_copy_att Lib "netcdf.dll" (ByVal ncid_in As Int32, ByVal varid_in As Int32, _
       ByVal name As String, ByVal ncid_out As Int32, ByVal varid_out As Int32) As Int32
    ' int nc_rename_att(int ncid, int varid, const char *name, const char *newname);
    Declare Ansi Function nc_rename_att Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
       ByVal name As String, ByRef newname As String) As Int32
    ' int nc_del_att(int ncid, int varid, const char *name);
    Declare Ansi Function nc_del_att Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
       ByVal name As String) As Int32
    ' int nc_put_att_text(int ncid, int varid, const char *name,
    '	size_t len, const char *op);
    Declare Ansi Function nc_put_att_text Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal len As Int32, ByVal op As String) As Int32
    ' int nc_get_att_text(int ncid, int varid, const char *name, char *ip);
    Declare Ansi Function nc_get_att_text Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal op As StringBuilder) As Int32
    '
    ' int nc_put_att_uchar(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const unsigned char *op);
    Declare Ansi Function nc_put_att_uchar Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As Byte) As Int32
    ' int nc_get_att_uchar(int ncid, int varid, const char *name, unsigned char *ip);
    Declare Ansi Function nc_get_att_uchar Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Byte) As Int32
    '
    ' NOTE: There's no integral signed byte type in VB, so I won't implement these. If you need to 
    ' read an attribute of unsigned type, use the nc_get_att_int to read it directly into shorts, which
    ' will preserve the data. Ahhh... what the heck. Here they are anyway, for the signed-byte-writing freaks.
    ' int nc_put_att_schar(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const signed char *op);
    Declare Ansi Function nc_put_att_schar Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As Byte) As Int32
    ' int nc_get_att_schar(int ncid, int varid, const char *name, signed char *ip);
    Declare Ansi Function nc_get_att_schar Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_att_short(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const short *op);
    Declare Ansi Function nc_put_att_short Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As Int16) As Int32
    ' int nc_get_att_short(int ncid, int varid, const char *name, short *ip);
    Declare Ansi Function nc_get_att_short Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Int16) As Int32
    ' int nc_put_att_int(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const int *op);
    Declare Ansi Function nc_put_att_int Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As Int32) As Int32
    ' int nc_get_att_int(int ncid, int varid, const char *name, int *ip);
    Declare Ansi Function nc_get_att_int Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_att_long(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const long *op);
    Declare Ansi Function nc_put_att_long Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As Int32) As Int32
    ' int nc_get_att_long(int ncid, int varid, const char *name, long *ip);
    Declare Ansi Function nc_get_att_long Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_att_float(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const float *op);
    Declare Ansi Function nc_put_att_float Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As Single) As Int32
    ' int nc_get_att_float(int ncid, int varid, const char *name, float *ip);
    Declare Ansi Function nc_get_att_float Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Single) As Int32
    ' int nc_put_att_double(int ncid, int varid, const char *name, nc_type xtype,
    '	size_t len, const double *op);
    Declare Ansi Function nc_put_att_double Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, ByVal xtype As NetCDF.nc_type, ByVal len As Int32, <[In]()> ByVal op() As double) As Int32
    ' int nc_get_att_double(int ncid, int varid, const char *name, double *ip);
    Declare Ansi Function nc_get_att_double Lib "netcdf.dll" (ByVal ncid As Int32, ByVal varid As Int32, _
      ByVal name As String, <[In](), Out()> ByVal ip() As Double) As Int32

    ' VARIABLE CREATION AND INQ

    ' int nc_def_var(int ncid, const char *name,
    '	 nc_type xtype, int ndims, const int *dimidsp, int *varidp);
    Declare Ansi Function nc_def_var Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal name As String, ByVal xtype As nc_type, ByVal ndims As Int32, _
        <[In]()> ByVal dimids() As Integer, ByRef varid As Int32) As Int32
    ' int nc_inq_var(int ncid, int varid, char *name, nc_type *xtypep, int *ndimsp, int *dimidsp, int *nattsp);
    Declare Ansi Function nc_inq_var Lib "netcdf.dll" (ByVal ncid As Int32, _
    ByVal varid As Int32, ByVal name As StringBuilder, ByRef xtypep As nc_type, ByRef ndimsp As Int32, _
    <Out()> ByVal dimidsp() As Integer, ByRef nattsp As Int32) As Int32
